recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:3: error: '=>' expected but ',' found.
    case steps,angle,length,increment if steps>0 => spiral(steps-1,angle,length+increment,increment)
              ^